k8s/04-backend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green-deployment
  namespace: jdh
  labels:
    type: backend
    slot: green
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      slot: green
  template:
    metadata:
      labels:
        type: backend
        slot: green
    spec:
      containers:
        - name: backend
          image: deatytim/tmbackend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
