k8s/12-websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-deployment
  namespace: jdh
  labels:
    type: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      type: websocket
  template:
    metadata:
      labels:
        type: websocket
    spec:
      containers:
        - name: websocket
          image: deatytim/tmbackend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
