k8s/02-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: jdh
spec:
  selector:
    type: db
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
