k8s/05-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: jdh
spec:
  selector:
    type: backend
    slot: blue
  ports:
    - port: 8080
      targetPort: 8080
