k8s/07-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: jdh
spec:
  selector:
    type: frontend
    slot: blue
  ports:
    - port: 80
      targetPort: 80
