k8s/13-websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  namespace: jdh
spec:
  selector:
    type: websocket
  ports:
    - port: 8080
      targetPort: 8080
